<?xml version="1.0"?>
<package format="2">
  <name>softhand_ros</name>
  <version>0.0.0</version>
  <description>The Softhand ROS package</description>

  <maintainer email="shingogo.5511@gmail.com">Shingo Kitagawa</maintainer>
  <author email="shingogo.5511@gmail.com">Shingo Kitagawa</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>dynamixel_motor</run_depend>
  <run_depend>jsk_arc2017_baxter</run_depend>

  <export>
  </export>
</package>
