<?xml version="1.0"?>
<package format="2">
  <name>softhand_ros</name>
  <version>0.0.0</version>
  <description>The Softhand ROS package</description>

  <maintainer email="shingogo.5511@gmail.com">Shingo Kitagawa</maintainer>
  <author email="shingogo.5511@gmail.com">Shingo Kitagawa</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>dynamixel_motor</exec_depend>
  <exec_depend>jsk_arc2017_baxter</exec_depend>

  <export>
  </export>
</package>
